LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static MethodHandle heif_context_read_from_memory$handle() {
        return heif_context_read_from_memory.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static MemorySegment heif_context_read_from_memory(SegmentAllocator allocator, MemorySegment x0, MemorySegment mem, long size, MemorySegment x3) {
        var mh$ = heif_context_read_from_memory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_read_from_memory", allocator, x0, mem, size, x3);
            }
            return (MemorySegment)mh$.invokeExact(allocator, x0, mem, size, x3);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_read_from_memory_without_copy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_LONG_LONG,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_read_from_memory_without_copy"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory_without_copy(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static FunctionDescriptor heif_context_read_from_memory_without_copy$descriptor() {
        return heif_context_read_from_memory_without_copy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory_without_copy(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static MethodHandle heif_context_read_from_memory_without_copy$handle() {
        return heif_context_read_from_memory_without_copy.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory_without_copy(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static MemorySegment heif_context_read_from_memory_without_copy(SegmentAllocator allocator, MemorySegment x0, MemorySegment mem, long size, MemorySegment x3) {
        var mh$ = heif_context_read_from_memory_without_copy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_read_from_memory_without_copy", allocator, x0, mem, size, x3);
            }
            return (MemorySegment)mh$.invokeExact(allocator, x0, mem, size, x3);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_read_from_reader {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_read_from_reader"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_reader(struct heif_context *, const struct heif_reader *reader, void *userdata, const struct heif_reading_options *)
     * }
     */
    public static FunctionDescriptor heif_context_read_from_reader$descriptor() {
        return heif_context_read_from_reader.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_reader(struct heif_context *, const struct heif_reader *reader, void *userdata, const struct heif_reading_options *)
     * }
     */
    public static MethodHandle heif_context_read_from_reader$handle() {
        return heif_context_read_from_reader.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_reader(struct heif_context *, const struct heif_reader *reader, void *userdata, const struct heif_reading_options *)
     * }
     */
    public static MemorySegment heif_context_read_from_reader(SegmentAllocator allocator, MemorySegment x0, MemorySegment reader, MemorySegment userdata, MemorySegment x3) {
        var mh$ = heif_context_read_from_reader.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_read_from_reader", allocator, x0, reader, userdata, x3);
            }
            return (MemorySegment)mh$.invokeExact(allocator, x0, reader, userdata, x3);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_number_of_top_level_images {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_number_of_top_level_images"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_context_get_number_of_top_level_images(struct heif_context *ctx)
     * }
     */
    public static FunctionDescriptor heif_context_get_number_of_top_level_images$descriptor() {
        return heif_context_get_number_of_top_level_images.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_context_get_number_of_top_level_images(struct heif_context *ctx)
     * }
     */
    public static MethodHandle heif_context_get_number_of_top_level_images$handle() {
        return heif_context_get_number_of_top_level_images.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_context_get_number_of_top_level_images(struct heif_context *ctx)
     * }
     */
    public static int heif_context_get_number_of_top_level_images(MemorySegment ctx) {
        var mh$ = heif_context_get_number_of_top_level_images.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_number_of_top_level_images", ctx);
            }
            return (int)mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_is_top_level_image_ID {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_is_top_level_image_ID"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_context_is_top_level_image_ID(struct heif_context *ctx, heif_item_id id)
     * }
     */
    public static FunctionDescriptor heif_context_is_top_level_image_ID$descriptor() {
        return heif_context_is_top_level_image_ID.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_context_is_top_level_image_ID(struct heif_context *ctx, heif_item_id id)
     * }
     */
    public static MethodHandle heif_context_is_top_level_image_ID$handle() {
        return heif_context_is_top_level_image_ID.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_context_is_top_level_image_ID(struct heif_context *ctx, heif_item_id id)
     * }
     */
    public static int heif_context_is_top_level_image_ID(MemorySegment ctx, int id) {
        var mh$ = heif_context_is_top_level_image_ID.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_is_top_level_image_ID", ctx, id);
            }
            return (int)mh$.invokeExact(ctx, id);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_list_of_top_level_image_IDs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_list_of_top_level_image_IDs"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_context_get_list_of_top_level_image_IDs(struct heif_context *ctx, heif_item_id *ID_array, int count)
     * }
     */
    public static FunctionDescriptor heif_context_get_list_of_top_level_image_IDs$descriptor() {
        return heif_context_get_list_of_top_level_image_IDs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_context_get_list_of_top_level_image_IDs(struct heif_context *ctx, heif_item_id *ID_array, int count)
     * }
     */
    public static MethodHandle heif_context_get_list_of_top_level_image_IDs$handle() {
        return heif_context_get_list_of_top_level_image_IDs.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_context_get_list_of_top_level_image_IDs(struct heif_context *ctx, heif_item_id *ID_array, int count)
     * }
     */
    public static int heif_context_get_list_of_top_level_image_IDs(MemorySegment ctx, MemorySegment ID_array, int count) {
        var mh$ = heif_context_get_list_of_top_level_image_IDs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_list_of_top_level_image_IDs", ctx, ID_array, count);
            }
            return (int)mh$.invokeExact(ctx, ID_array, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_primary_image_ID {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_primary_image_ID"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_ID(struct heif_context *ctx, heif_item_id *id)
     * }
     */
    public static FunctionDescriptor heif_context_get_primary_image_ID$descriptor() {
        return heif_context_get_primary_image_ID.DESC;
    }
